--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "pinia": "^2.1.7",
     "sass": "^1.80.5",
     "vue": "^3.4.29",
